# advanced-data-and-ai-engineering

./: .gitignore  README.md  development_log.md  plan.md
ai_engineering/16_pydantic_llm_parser/: README.md  main.py
ai_engineering/17_rrf_hybrid_search/: README.md
ai_engineering/21_multi_agent_debate/: README.md  knowledge.md  main.py  paper_summary.md  report.md
ai_engineering/22_multi_model_router/: README.md  main.py
ai_engineering/23_semantic_chunking_embedding/: README.md  main.py
ai_engineering/24_resumable_self_healing_agent/: README.md  main.py
ai_engineering/25_fugu_vs_local_orchestration/: README.md  agent_fugu.py  agent_local.py  benchmark.py  data_generator.py
ai_engineering/26_ollama_stream_backpressure/: README.md
ai_engineering/27_agentic_rag_self_healing/: README.md  main.py
ai_engineering/28_multi_agent_scientist_loop/: README.md  main.py  target_code.py  test_target_code.py
ai_engineering/RAG_Primitive/: .gitignore  ARCH_DESIGN.md  BENCHMARK_REPORT.md  HYBRID_SEARCH_EVAL.md  PROJECT_STATUS.md  compare_search.py  compare_search_shoshika.py  deep_analyze_search.py  fetch_full_chunks.py  main.py  optimize.py  pyproject.toml  search.py
ai_engineering/RAG_Primitive/src/rag_primitive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_engineering/RAG_Primitive/src/rag_primitive/acquisition/: api_client.py  crawler.py
ai_engineering/RAG_Primitive/src/rag_primitive/core/: config.py  logging.py  utils.py
ai_engineering/RAG_Primitive/src/rag_primitive/embedding/: model.py
ai_engineering/RAG_Primitive/src/rag_primitive/processing/: chunker.py
ai_engineering/RAG_Primitive/src/rag_primitive/schemas/: chunk.py  speech.py
ai_engineering/RAG_Primitive/src/rag_primitive/storage/: lancedb_client.py
ai_engineering/TechTrendWatcher/: .gitignore  ARCHITECTURE_REVIEW.md  README.md  Test_Direction.md  pyproject.toml
ai_engineering/TechTrendWatcher/.github/workflows/: main.yml
ai_engineering/TechTrendWatcher/src/techtrendwatcher/: main.py
ai_engineering/TechTrendWatcher/src/techtrendwatcher/core/: base.py  config.py  exceptions.py  logger.py  logging.config.json
ai_engineering/TechTrendWatcher/src/techtrendwatcher/github/: client.py  processor.py
ai_engineering/TechTrendWatcher/src/techtrendwatcher/models/: base.py  github.py
ai_engineering/TechTrendWatcher/src/techtrendwatcher/notion/: client.py
ai_engineering/TechTrendWatcher/src/techtrendwatcher/reddit/: client.py
ai_engineering/TechTrendWatcher/src/techtrendwatcher/snowflake/: client.py
ai_engineering/TechTrendWatcher/tests/: test_config.py  test_github_client.py  test_models.py  test_notion_client.py  test_processor.py
data_engineering/01_defensive_parser/: README.md
data_engineering/02_in_memory_join/: README.md
data_engineering/03_time_series_session/: README.md
data_engineering/BigData_Transformer/: .gitignore  ARCHITECTURE.md  GEMINI.md  MEMORY.md  PYTHON_MEMORY_RESEARCH.md  README.md  main.py  pyproject.toml
data_engineering/BigData_Transformer/src/bigdata_transform/core/: config.py  logger.py  utils.py
data_engineering/BigData_Transformer/src/bigdata_transform/generator/: consumer.py  engine.py  producer.py
data_engineering/BigData_Transformer/src/bigdata_transform/load/: load.py
data_engineering/BigData_Transformer/src/bigdata_transform/schema/: ecommerce.py
data_engineering/BigData_Transformer/src/bigdata_transform/transformer/: engine.py
(+101 files in other folders)
