[project]
name = "techtrendwatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "notion-client>=3.0.0",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "snowflake-snowpark-python>=1.45.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/techtrendwatcher"]

[project.scripts]
ttw = "techtrendwatcher.main:run"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.15.7",
]


[tool.ruff]
target-version = "py311"
line-length = 88
# 厳しめのルールセットを選択
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (importの自動整理)
    "B",   # flake8-bugbear (バグの原因になりやすいコードを検出)
    "C4",  # flake8-comprehensions (リスト内包表記の最適化)
    "UP",  # pyupgrade (古いPython構文の修正)
    "ARG", # flake8-unused-arguments (使ってない引数の検出)
    "PT",  # flake8-pytest-style (pytestの書き方の統一)
    "PL",  # pylint (pylintの主要なルール)
]
lint.ignore = [
    "E501", # 行の長さはフォーマッタに任せる
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# 外部ライブラリ（snowflake-snowparkなど）で型定義がない場合にエラーにしない
disallow_untyped_defs = true
check_untyped_defs = true
plugins = [
    "pydantic.mypy"
]

[tool.pydantic.mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
# 型定義がまだ不完全なライブラリは個別に無視設定
module = [
    "snowflake.*",
    "notion_client.*",
    "tenacity.*",
    "github.*"
]
