[project]
name = "bigdata-transformer"
version = "0.1.0"
description = "Generate 10GB dummy JSON and transform it with Polars under 512MB RAM using Pydantic, then load to Snowflake."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "faker>=20.0.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "snowflake-connector-python>=3.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
    "pydantic-settings>=2.14.0",
    "snowflake-snowpark-python>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/bigdata_transform"]
